--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,9 @@
 @tailwind base;
 @tailwind components;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
 @tailwind utilities;
 
 :root {
@@ -17,6 +21,7 @@
 }
 
 body {
+  font-family: 'Poppins', sans-serif, 'Itim', cursive;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
