--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,3 +20,8 @@ body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
+
+button.disabled {
+  background-color: gray;
+  color: white;
+}
